--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/mohithrp">
+              <a href="https://github.com/mohithpukale">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
