Restrucuring content and filling in few sections

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <!--link href="vendor/devicons/css/devicons.min.css" rel="stylesheet" -->
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
     <link href="vendor/jquery/jquery.qtip.min.css" rel="stylesheet">
@@ -45,16 +44,16 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
@@ -73,7 +72,9 @@
           <div class="subheading mb-5">6530 El Colegio Rd · Santa Barbara, CA 93106 · (805) 570-7740 ·
             <a href="mailto:mohithrp93@gmail.com">mohithrp93@gmail.com</a>
           </div>
-          <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p class="mb-5">I am Masters student at UC Santa Barbara focussing on Security and Cryptography. I have experience of two years in Big Data
+engineering while working as Software Developer at Amazon</p>
+          <div><p><a href="resources/MohithPukale.pdf">Resume</a> Last updated: November 2017</p></div>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://facebook.com/mohith.pukale">
@@ -111,6 +112,51 @@
         </div>
       </section>
 
+      
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
+        <div class="my-auto">
+          <h2 class="mb-5">Education</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">University of California Santa Barbara</h3>
+              <div class="subheading mb-3">Master of Science</div>
+              <div>Computer Science</div>
+              <p>GPA: 4.0</p>
+              <p>Coursework: Advanced Topics in Security, Advanced Topics in Cryotography</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">September 2017 - April 2019 (Expected)</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">PES Institute of Technology</h3>
+              <div class="subheading mb-3">Bachelor of Engineering</div>
+              <div>Information Science &amp; Engineering</div>
+              <p>GPA: 9.25 (Scale of 10)</p>
+              <p>Coursework (Electives): Computer &amp; Netwokr Security, Natural Language Processing, Data Mining</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">September 2011 - June 2015</span>
+            </div>
+          </div>
+
+        </div>
+      </section>
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+        <div class="my-auto">
+          <h2 class="mb-5">Projects</h2>
+          <div class="subheading mb-3">Secure Chat</div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <div class="subheading mb-3">SalesBot</div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+      </section>
+
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
@@ -141,42 +187,10 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Software Developer Intern</h3>
               <div class="subheading mb-3">Intuit</div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p></p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">June 2014 - August 2014</span>
-            </div>
-          </div>
-
-        </div>
-
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
-        <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of California Santa Barbara</h3>
-              <div class="subheading mb-3">Master of Science</div>
-              <div>Computer Science</div>
-              <p>GPA: 4.0</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2017 - April 2019 (Expected)</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">PES Institute of Technology</h3>
-              <div class="subheading mb-3">Bachelor of Engineering</div>
-              <div>Information Science &amp; Engineering</div>
-              <p>GPA: 9.25 (Scale of 10)</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2011 - June 2015</span>
             </div>
           </div>
 
@@ -227,31 +241,22 @@
             </li>            
           </ul>
 
-          <div class="subheading mb-3">Workflow</div>
+          <div class="subheading mb-3">Technologies also used</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              Apache Hadoop</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
+              NLTK for Natural Language Processing</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
+              numpy &amp; scipy</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span>
+            </li>
           </ul>
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
-        <div class="my-auto">
-          <h2 class="mb-5">Projects</h2>
-          <div class="subheading mb-3">Secure Chat</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <div class="subheading mb-3">SalesBot</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
       </section>
 
@@ -267,6 +272,10 @@
               <i class="fa-li fa fa-trophy text-warning"></i>
               1<sup>st</sup>
               Place - PES Institute of Technology - Deloitte Cyber Security Challenge 2014</li>
+              <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                3<sup>rd</sup>
+                Place - Amazon - Alexa Hackathon 2017
           </ul>
         </div>
       </section>
