Adding projects w/o content

--- a/index.html
+++ b/index.html
@@ -150,9 +150,23 @@ engineering while working as Software Developer at Amazon</p>
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
           <h2 class="mb-5">Projects</h2>
-          <div class="subheading mb-3">Secure Chat</div>
+          <h3 class="mb-0">Secure Machine Learning</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <div class="subheading mb-3">SalesBot</div>
+          <h3 class="mb-0">Reflector</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h3>Secure Chat</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h3>Sales-Rep Bot</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h3>AutoDroid</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h3>Wireless Network Pen-Testing</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h3>Enhancement of I2P</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h3>Blutendance</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h3>Fifa Score Bot</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
       </section>
@@ -165,7 +179,7 @@ engineering while working as Software Developer at Amazon</p>
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Software Developer</h3>
               <div class="subheading mb-3">Amazon</div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>I worked for the Consumer Knowledge Platform Team which is a data engineering team developing platform for easy data access and big data workflow. Re-architecture of service (including new data model and metrics) leading to 25% faster response. Implemented automated recovery system for big data analytic work-flows. Reduced operational load by 15% by breaking down monolithic service into a federated service. Added feature for failure and delay notification for work-flows.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2015 - August 2017</span>
@@ -176,7 +190,7 @@ engineering while working as Software Developer at Amazon</p>
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Software Developer Intern</h3>
               <div class="subheading mb-3">Amazon</div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>I worked for the Consumer Marketing Analytics Team which is a data analysis team working on downstream impact and customer behavior.Improved usability of portal by adding interactive graphing section, report generation feature and pagination. Automated aggregation of customer scores using Apache Pig and publishing using AWS workflow service.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Januray 2015 - July 2015</span>
@@ -187,7 +201,7 @@ engineering while working as Software Developer at Amazon</p>
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Software Developer Intern</h3>
               <div class="subheading mb-3">Intuit</div>
-              <p></p>
+              <p>I worked for the QuickBookOnline Team which is a accounting and ledger management software for small to medium size business.Built a service to mask sensitive data to be consumed by QA Engineers.Reduced request time for data by 20% by moving backend for above service from MySQL to MongoDB.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">June 2014 - August 2014</span>
@@ -254,7 +268,7 @@ engineering while working as Software Developer at Amazon</p>
               numpy &amp; scipy</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span>
+              <span class="latex">L<sup>A</sup>T<sub>E</sub>X</span>
             </li>
           </ul>
         </div>
