--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <div class="subheading mb-3">Master of Science</div>
               <div>Computer Science</div>
               <p>GPA: 4.0</p>
-              <p>Coursework: Advanced Topics in Security, Advanced Topics in Cryotography</p>
+              <p>Coursework: Advanced Topics in Security, Advanced Topics in Cryptography</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2017 - April 2019 (Expected)</span>
@@ -139,7 +139,7 @@
               <div class="subheading mb-3">Bachelor of Engineering</div>
               <div>Information Science &amp; Engineering</div>
               <p>GPA: 9.25 (Scale of 10)</p>
-              <p>Coursework (Electives): Computer &amp; Netwokr Security, Natural Language Processing, Data Mining</p>
+              <p>Coursework (Electives): Computer &amp; Network Security, Natural Language Processing, Data Mining</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2011 - June 2015</span>
