Updating resume and adding latest projects

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
           <h1 class="mb-0">Mohith
             <span class="text-primary">Pukale</span>
           </h1>
-          <div class="subheading mb-5">6530 El Colegio Rd · Santa Barbara, CA 93106 · (805) 570-7740 ·
+          <div class="subheading mb-5">6510 El Colegio Rd · Santa Barbara, CA 93106 · (805) 570-7740 ·
             <a href="mailto:mohithrp93@gmail.com">mohithrp93@gmail.com</a>
           </div>
           <p class="mb-5">Hello, welcome to my home page!
           <br>I am currently pursuing Master of Science in Computer Science from University of California Santa Barbara.
           <br>I am interested in topics in Security such as web security, privacy, intrusion detection. Also I am keen on exploring machine learning applications in security and cryptography. Previously I worked as a Software Developer at Amazon working on Big Data Engineering for two years.</p>
-          <div><p><a href="resources/MohithPukale.pdf">Resume</a> Last updated: November 2017</p></div>
+          <div><p><a href="resources/MohithPukale.pdf">Resume</a> Last updated: September 2018</p></div>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://facebook.com/mohith.pukale">
@@ -125,8 +125,8 @@
               <h3 class="mb-0">University of California Santa Barbara</h3>
               <div class="subheading mb-3">Master of Science</div>
               <div>Computer Science</div>
-              <p>GPA: 4.0</p>
-              <p>Coursework: Advanced Topics in Security, Advanced Topics in Cryptography</p>
+              <p>GPA: 3.9</p>
+              <p>Coursework: Advanced Topics in Security, Advanced Topics in Cryptography, Cloud Computing, Information Retrieval</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2017 - April 2019 (Expected)</span>
@@ -152,6 +152,17 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Graduate Student Researcher</h3>
+              <div class="subheading mb-3">UC Santa Barbara</div>
+              <p>I am working on building a Fault-tolerant Oblivious Data Storage which is cloud storage solution which provides availability, privacy and security using Oblivious RAM. Adopted existing fault tolerant storage systems to incorporate ORAM and design components to hide data access patterns.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">June 2018 - Present</span>
+            </div>
+          </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
@@ -192,6 +203,10 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
           <h2 class="mb-5">Projects</h2>
+          <h3>Ramsey Search</h3>
+          <p>It is cloud-based search and optimization project to find counterexamples for <a href="http://mathworld.wolfram.com/RamseysTheorem.html"> Ramsey Theorem</a> It was built making use of a Master-Slave architecture using Go to distribute tasks on various cloud platforms. Various techniques such as Tabu Search, Simulated annealing was used for search optimization and to avoid local minima.</p>
+          <h3>WikiSummary</h3>
+          <p>Wiki Search and Summary is a web application for searching wikipedia. A short summary for each of the search results is displayed to make getting the right page faster. The document summarizer checks the query term frequency in each sentence to do the sentence extraction and hence get the summary. The project is developed in Python 3, Solr and Elastic Search for searching the documents. <a href="https://github.com/mohithpukale/wikiSummary"> Github Link</a></p>
           <h3 class="mb-0">Privacy Preserving Spam Detector</h3>
           <p>The aim was to build a spam classifier, which would not have access to the content of the emails. The model is a simple bag-of-words Logistic Classifier, which will extract words of relevance from the text and assign weights to them. A partial homomoprhic Paillier cryptosystem was used for encryption to compare the performance metric vs unencrypted data. <a href="https://github.com/ap1995/Cryptography"> Github Link</a></p>
           <h3 class="mb-0">Reflector</h3>
@@ -225,6 +240,9 @@
             </li>
             <li class="list-inline-item">
               <i class="devicon-c-plain"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicon-go"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicon-amazonwebservices-plain-wordmark"></i>
