--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none"></span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/DSC00083.jpeg" alt="">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,7 +73,7 @@
           <p class="mb-5">Welcome to my home page!
           <br>I'm a Software Developer based in Seattle with 6 years of professional work experience.
           <br>My time at multiple companies has enabled me to become a proficient full-stack developer, but building distributed systems and infrastructure that focus on security and privacy are my specialties.</p>
-          <div><p><a href="resources/MohithPukale.pdf">Resume</a> Last updated: May 2023</p></div>
+          <div><p><a href="resources/Resume-2023.pdf">Resume</a> Last updated: May 2023</p></div>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/mohith-pukale">
